typesafe_builder_derive/tests/ui/6.stderr
error[E0599]: no method named `build` found for struct `UserBuilder<_TypesafeBuilderFilled, _TypesafeBuilderFilled, _TypesafeBuilderEmpty, _TypesafeBuilderEmpty>` in the current scope
  --> tests/ui/6.rs:23:10
   |
7  |       #[derive(Builder)]
   |                ------- method `build` not found for this struct
...
20 |       let user = UserBuilder::new()
   |  ________________-
21 | |         .with_name("Alice".to_string())
22 | |         .with_age(20)
23 | |         .build();
   | |         -^^^^^ method not found in `UserBuilder<_TypesafeBuilderFilled, _TypesafeBuilderFilled, _TypesafeBuilderEmpty, _TypesafeBuilderEmpty>`
   | |_________|
   |
   |
   = note: the method was found for
           - `UserBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderEmpty, _TypesafeBuilderEmpty, _TypesafeBuilderEmpty>`
           - `UserBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderEmpty, _TypesafeBuilderEmpty, _TypesafeBuilderFilled>`
           - `UserBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderEmpty, _TypesafeBuilderFilled, _TypesafeBuilderEmpty>`
           - `UserBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderEmpty, _TypesafeBuilderFilled, _TypesafeBuilderFilled>`
           and 9 more types

error[E0599]: no method named `build` found for struct `UserBuilder<_TypesafeBuilderFilled, _TypesafeBuilderEmpty, _TypesafeBuilderFilled, _TypesafeBuilderEmpty>` in the current scope
  --> tests/ui/6.rs:29:10
   |
7  |       #[derive(Builder)]
   |                ------- method `build` not found for this struct
...
26 |       let user = UserBuilder::new()
   |  ________________-
27 | |         .with_name("Alice".to_string())
28 | |         .with_address("123 Main St".to_string())
29 | |         .build();
   | |         -^^^^^ method not found in `UserBuilder<_TypesafeBuilderFilled, _TypesafeBuilderEmpty, _TypesafeBuilderFilled, _TypesafeBuilderEmpty>`
   | |_________|
   |
   |
   = note: the method was found for
           - `UserBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderEmpty, _TypesafeBuilderEmpty, _TypesafeBuilderEmpty>`
           - `UserBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderEmpty, _TypesafeBuilderEmpty, _TypesafeBuilderFilled>`
           - `UserBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderEmpty, _TypesafeBuilderFilled, _TypesafeBuilderEmpty>`
           - `UserBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderEmpty, _TypesafeBuilderFilled, _TypesafeBuilderFilled>`
           and 9 more types
